<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023. All rights reserved.
  ~ Dissemination of this information or reproduction of this material is strictly forbidden
  ~ unless prior written permission is obtained from Divya N.
  ~
  ~ Created by Divya N
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/image_view_company"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_infosys"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_title"
            style="@style/AppTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_designer"
            app:layout_constraintStart_toEndOf="@+id/image_view_company"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/AppTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/company_name"
            app:layout_constraintStart_toEndOf="@+id/image_view_company"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

        <ImageView
            android:id="@+id/image_view_save"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_menu_save"
            android:backgroundTint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layout_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_company">

            <TextView
                style="@style/AppTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/full_time"
                app:drawableStartCompat="@drawable/ic_clock"
                app:drawableTint="@color/colorOrange" />

            <TextView
                style="@style/AppTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/yrs_exp"
                app:drawableStartCompat="@drawable/ic_suitcase"
                app:drawableTint="@color/colorPrimary" />

            <TextView
                style="@style/AppTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/job_type"
                app:drawableStartCompat="@drawable/ic_pin"
                app:drawableTint="@color/colorRed" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_view_count"
            style="@style/AppTextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/no_applicants"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_about" />

        <TextView
            style="@style/AppTextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/time_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_about" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_count" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/view_divider">

            <Button
                style="@style/ButtonSecondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="View Jobs" />

            <Button
                style="@style/ButtonPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="Apply Now" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>